--- a/learme-platform-ui/src/assets/css/typographic.css
+++ b/learme-platform-ui/src/assets/css/typographic.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+html,
+body {
+    padding: 0;
+    margin: 0;
+}
+
 .h1,
 .h2,
 .h3,
@@ -70,38 +76,76 @@
     font-size: 12px;
     line-height: 18px;
 }
+
 .text-badge {
-  font-size: 8px;
-  line-height: 14px;
+    font-size: 8px;
+    line-height: 14px;
 }
+
+
 /*ALIGN*/
-.text-center { text-align: center; }
-.text-left { text-align: left; }
-.text-right { text-align: right; }
-.justify-center { justify-content: center; }
-.justify-space-between { justify-content: space-between; }
-.justify-space-around { justify-content: space-around; }
-.align-center { align-items: center; }
-.d-flex { display: flex; }
-.d-inline-flex { display: inline-flex; }
-.flex-column { flex-direction: column; }
-.divider { width: 100%; height: 1px; background: #E0E0E0; }
+
+.text-center {
+    text-align: center;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.justify-space-between {
+    justify-content: space-between;
+}
+
+.justify-space-around {
+    justify-content: space-around;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.d-inline-flex {
+    display: inline-flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.divider {
+    width: 100%;
+    height: 1px;
+    background: #E0E0E0;
+}
 
 @media (min-width: 768px) and (max-width: 1199px) {
-  .h1 {
-    font-size: 40px;
-    line-height: 48px;
-  }
-  .subtitle {
-    font-size: 18px;
-    line-height: 28px;
-  }
+    .h1 {
+        font-size: 40px;
+        line-height: 48px;
+    }
+    .subtitle {
+        font-size: 18px;
+        line-height: 28px;
+    }
 }
 
 @media (max-width: 767px) {
     .h1 {
-      font-size: 24px;
-      line-height: 32px;
+        font-size: 24px;
+        line-height: 32px;
     }
     .h2 {
         font-size: 24px;
@@ -120,12 +164,12 @@
         line-height: 18px;
     }
     .subtitle {
-      font-size: 14px;
-      line-height: 21px;
+        font-size: 14px;
+        line-height: 21px;
     }
     .body-text {
-      font-size: 14px;
-      line-height: 21px;
+        font-size: 14px;
+        line-height: 21px;
     }
     .table-text {
         font-size: 12px;
